[gd_scene load_steps=2 format=3 uid="uid://dkivowkb4lat3"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_1mt6e"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mt6e")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="PAUSED" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="Paused" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit to Desktop"

[connection signal="pressed" from="VBoxContainer/Paused" to="." method="_on_paused_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
